<resources>
    <string name="app_name">TELA_LOGIN_AUGUSTO_CAMARGO</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="user_image">User image</string>
    <string name="email_icon">Email icon</string>
    <string name="user_icon">User icon</string>
    <string name="Deslogar">Deslogar</string>
    <string name="encontrar_entregador">Encontrar Entregador</string>
    <string name="instalogo">instaLogo</string>
    <string name="nomeMotoboy">Nome</string>
    <string name="entregador">        Entregador</string>
    <string name="restaurante">       Restaurante</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entregasja">Entregas Já</string>
    <string name="title_activity_tela_recycler_view">tela_recycler_view</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>