<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastro">


    <TextView
        android:id="@+id/title_cadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/title_cadastro"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_cadastrese"

        />


    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"

        />


    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:autofillHints="emailAddress"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/edit_nome"
        app:layout_constraintStart_toStartOf="@id/edit_nome"

        app:layout_constraintTop_toBottomOf="@+id/edit_nome" />


    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintEnd_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"

        android:autofillHints="password" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        style="@style/Button"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"

        />


</androidx.constraintlayout.widget.ConstraintLayout>