<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaPrincipal">


    <View
        android:id="@+id/container_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/container_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"

        android:layout_height="100dp"
        android:contentDescription="@string/user_image"
        android:src="@drawable/ic_user"

        app:layout_constraintBottom_toBottomOf="@+id/container_user"
        app:layout_constraintEnd_toEndOf="@+id/container_user"
        app:layout_constraintStart_toStartOf="@+id/container_user"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView

        android:id="@+id/icone_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_user"


        />


    <TextView
        android:id="@+id/textNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/icone_user"
        app:layout_constraintTop_toBottomOf="@id/container_user"


        />


    <ImageView
        android:id="@+id/icone_mail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/email_icon"
        android:src="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icone_user"


        />


    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/icone_mail"
        app:layout_constraintTop_toBottomOf="@id/textNomeUsuario"


        />


    <Button
        android:id="@+id/btn_deslogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/black"
        android:padding="20dp"
        android:text="@string/Deslogar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textEmail"

        />


</androidx.constraintlayout.widget.ConstraintLayout>